--- a/index.html
+++ b/index.html
@@ -1,44 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Web Navigation</title>
 		<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 		<style>
 			.card-hover:hover .fa-icon {
-				transform: scale(1.2);
-				transition: transform 0.3s ease;
+				transform: scale(1.2) rotate(5deg);
+				transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 			}
 			.gradient-background {
-				background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+				background: linear-gradient(135deg, #84fab0 0%, #8fd3f4 100%);
+			}
+			.nav-link {
+				position: relative;
+				padding: 0.5rem 1rem;
+				border-radius: 0.5rem;
+				transition: all 0.3s ease;
+			}
+			.nav-link::after {
+				content: '';
+				position: absolute;
+				width: 0;
+				height: 3px;
+				bottom: -2px;
+				left: 50%;
+				transform: translateX(-50%);
+				background: linear-gradient(90deg, #3b82f6, #8b5cf6);
+				transition: width 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+				border-radius: 3px;
+			}
+			.nav-link:hover::after {
+				width: 80%;
+			}
+			.card-shadow {
+				box-shadow: 0 15px 35px -10px rgba(0, 0, 0, 0.15);
+				transition: all 0.3s ease;
+			}
+			.card-shadow:hover {
+				box-shadow: 0 20px 40px -15px rgba(0, 0, 0, 0.2);
+				transform: translateY(-5px);
+			}
+			.glass-effect {
+				backdrop-filter: blur(10px);
+				background: rgba(255, 255, 255, 0.9);
+			}
+			.animate-float {
+				animation: float 6s ease-in-out infinite;
+			}
+			@keyframes float {
+				0% {
+					transform: translateY(0px);
+				}
+				50% {
+					transform: translateY(-20px);
+				}
+				100% {
+					transform: translateY(0px);
+				}
+			}
+			.nav-icon {
+				font-size: 1.5rem;
+				transition: all 0.5s ease;
+			}
+			.nav-icon:hover {
+				color: #4f46e5;
+				transform: scale(1.2);
 			}
 		</style>
 	</head>
 
-	<body class="bg-gradient-to-br from-blue-50 to-purple-50 min-h-screen">
+	<body class="bg-gradient-to-br from-blue-50 via-indigo-50 to-purple-50 min-h-screen">
 		<!-- Enhanced Navigation -->
-		<nav class="bg-white shadow-lg">
-			<div class="container mx-auto px-6 py-4">
+		<nav class="glass-effect shadow-lg sticky top-0 z-50 border-b border-white/20">
+			<div class="container mx-auto px-8 py-4">
 				<div class="flex justify-between items-center">
-					<div class="flex items-center">
-						<i class="fas fa-globe text-blue-600 text-3xl mr-3"></i>
-						<div class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 text-transparent bg-clip-text">WebNav</div>
+					<div class="flex items-center space-x-4">
+						<i class="fas fa-globe nav-icon text-blue-600 text-3xl transform hover:rotate-180 transition-all duration-700"></i>
+						<div class="text-2xl font-bold bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 text-transparent bg-clip-text hover:scale-105 transition-transform cursor-pointer animate-float">WebNav</div>
 					</div>
-					<div class="flex space-x-6">
-						<a href="index.html" class="flex items-center text-gray-600 hover:text-blue-600 transition-colors">
-							<i class="fas fa-home mr-2"></i>
-							<span>Home</span>
+					<div class="flex space-x-8">
+						<a href="index.html" class="nav-link flex items-center text-gray-700 hover:text-blue-600 transition-all hover:bg-blue-50/80">
+							<i class="fas fa-home nav-icon mr-2"></i>
+							<span class="font-medium">Trang chủ</span>
 						</a>
-						<a href="#" class="flex items-center text-gray-600 hover:text-blue-600 transition-colors">
-							<i class="fas fa-info-circle mr-2"></i>
-							<span>About</span>
+						<a href="#" class="nav-link flex items-center text-gray-700 hover:text-blue-600 transition-all hover:bg-blue-50/80">
+							<i class="fas fa-info-circle nav-icon mr-2"></i>
+							<span class="font-medium">Giới thiệu</span>
 						</a>
-						<a href="daoluc.yy@gmail.com" class="flex items-center text-gray-600 hover:text-blue-600 transition-colors">
-							<i class="fas fa-envelope mr-2"></i>
-							<span>Contact</span>
+						<a href="mailto:daoluc.yy@gmail.com" class="nav-link flex items-center text-gray-700 hover:text-blue-600 transition-all hover:bg-blue-50/80">
+							<i class="fas fa-envelope nav-icon mr-2"></i>
+							<span class="font-medium">Liên hệ</span>
 						</a>
 					</div>
 				</div>
@@ -46,25 +101,28 @@
 		</nav>
 
 		<!-- Main Content -->
-		<div class="container mx-auto px-6 py-12">
-			<div class="text-center mb-16">
-				<h1 class="text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 mb-6">Web Navigation</h1>
-				<p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">Khám phá bộ sưu tập trải nghiệm web tương tác của chúng tôi với các hiệu ứng hoạt ảnh tuyệt đẹp, đếm ngược chính xác và hiệu ứng hình ảnh hấp dẫn.</p>
+		<div class="container mx-auto px-8 py-20">
+			<div class="text-center mb-24">
+				<h1 class="text-8xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 mb-10 animate-float">Web Navigation</h1>
+				<p class="text-2xl text-gray-600 max-w-4xl mx-auto leading-relaxed font-light">Khám phá bộ sưu tập trải nghiệm web tương tác của chúng tôi với các hiệu ứng hoạt ảnh tuyệt đẹp, đếm ngược chính xác và hiệu ứng hình ảnh hấp dẫn.</p>
 			</div>
 
-			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10" id="card-container"></div>
+			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-14" id="card-container"></div>
 		</div>
 
 		<!-- Enhanced Footer -->
-		<footer class="bg-white mt-16 border-t border-gray-200">
-			<div class="container mx-auto px-6 py-8">
-				<div class="flex justify-center space-x-6">
-					<a href="fb.com/RenjiYuusei" class="text-gray-400 hover:text-blue-600 transition-colors">
-						<i class="fab fa-facebook text-2xl"></i>
-					</a>
-					<a href="github.com/RenjiYuusei" class="text-gray-400 hover:text-blue-600 transition-colors">
-						<i class="fab fa-github text-2xl"></i>
-					</a>
+		<footer class="glass-effect mt-24 border-t border-white/20">
+			<div class="container mx-auto px-8 py-12">
+				<div class="flex flex-col items-center">
+					<div class="flex justify-center space-x-10 mb-8">
+						<a href="https://fb.com/RenjiYuusei" target="_blank" class="text-gray-400 hover:text-blue-600 transition-all transform hover:scale-125 hover:rotate-12">
+							<i class="fab fa-facebook nav-icon text-3xl"></i>
+						</a>
+						<a href="https://github.com/RenjiYuusei" target="_blank" class="text-gray-400 hover:text-purple-600 transition-all transform hover:scale-125 hover:-rotate-12">
+							<i class="fab fa-github nav-icon text-3xl"></i>
+						</a>
+					</div>
+					<p class="text-gray-500 text-base font-light">© 2024 RenjiYuusei. All rights reserved.</p>
 				</div>
 			</div>
 		</footer>
@@ -72,20 +130,21 @@
 		<script>
 			function createCard(title, description, link, icon, gradientColors) {
 				const card = document.createElement('div');
-				card.className = 'bg-white rounded-2xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 cursor-pointer card-hover';
+				card.className = 'glass-effect rounded-3xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-500 transform hover:-translate-y-2 hover:scale-105 cursor-pointer card-hover card-shadow';
 
 				card.innerHTML = `
-                <div class="h-48 flex items-center justify-center relative overflow-hidden"
-                     style="background: linear-gradient(120deg, ${gradientColors[0]} 0%, ${gradientColors[1]} 100%)">
-                    <i class="${icon} fa-icon text-white text-6xl transform transition-transform duration-300"></i>
+                <div class="h-56 flex items-center justify-center relative overflow-hidden group"
+                     style="background: linear-gradient(135deg, ${gradientColors[0]} 0%, ${gradientColors[1]} 100%)">
+                    <i class="${icon} fa-icon text-white text-8xl transform transition-all duration-500 group-hover:scale-110"></i>
+                    <div class="absolute inset-0 bg-gradient-to-t from-black/30 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                 </div>
-                <div class="p-8">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">${title}</h2>
-                    <p class="text-gray-600 leading-relaxed">${description}</p>
-                    <div class="mt-6 flex justify-end">
-                        <span class="text-blue-600 flex items-center group">
-                            Explore 
-                            <i class="fas fa-arrow-right ml-2 transform group-hover:translate-x-2 transition-transform"></i>
+                <div class="p-10">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4 hover:text-blue-600 transition-colors">${title}</h2>
+                    <p class="text-gray-600 leading-relaxed font-light text-lg">${description}</p>
+                    <div class="mt-10 flex justify-end">
+                        <span class="text-blue-600 flex items-center group hover:text-purple-600 transition-all">
+                            Khám phá 
+                            <i class="fas fa-arrow-right ml-3 transform group-hover:translate-x-4 transition-transform duration-300"></i>
                         </span>
                     </div>
                 </div>
@@ -103,51 +162,58 @@
 					title: 'Đếm ngược đến 2025',
 					description: 'Đếm ngược thời gian đến Tết Ất Mão 2025 với hiệu ứng động đẹp mắt',
 					link: 'tet.html',
-					icon: 'fas fa-hourglass-half',
+					icon: 'fa-solid fa-hourglass-half',
 					colors: ['#FF6B6B', '#FF8E8E'],
 				},
 				{
 					title: 'Hiệu ứng ảnh',
 					description: 'Mang lại sức sống cho ảnh của bạn với các hiệu ứng chuyển đổi và hoạt ảnh tương tác',
 					link: 'parody.html',
-					icon: 'fas fa-camera-retro',
+					icon: 'fa-solid fa-camera-retro',
 					colors: ['#4E95F3', '#73B1F7'],
 				},
-
 				{
 					title: 'Raw Git',
 					description: 'Chuyển đổi liên kết GitHub sang jsDelivr CDN với giao diện thân thiện',
 					link: 'rawgit.html',
-					icon: 'fab fa-github',
+					icon: 'fa-brands fa-github',
 					colors: ['#2ECC71', '#27AE60'],
 				},
 			];
 
-			// Create and append cards
-			cards.forEach(card => {
+			// Create and append cards with stagger effect
+			cards.forEach((card, index) => {
 				const cardElement = createCard(card.title, card.description, card.link, card.icon, card.colors);
 				cardContainer.appendChild(cardElement);
 			});
 
 			// Enhanced GSAP animations
 			gsap.from('.card-hover', {
-				duration: 1,
+				duration: 1.5,
 				opacity: 0,
-				y: 60,
-				stagger: 0.2,
-				ease: 'power3.out',
+				y: 100,
+				stagger: 0.4,
+				ease: 'elastic.out(1, 0.8)',
 			});
 
-			// Scroll-triggered animations
-			window.addEventListener('scroll', () => {
-				const cards = document.querySelectorAll('.card-hover');
-				cards.forEach(card => {
-					const cardTop = card.getBoundingClientRect().top;
-					if (cardTop < window.innerHeight - 100) {
-						card.style.opacity = '1';
-						card.style.transform = 'translateY(0)';
-					}
-				});
+			// Scroll-triggered animations with smooth transition
+			const observer = new IntersectionObserver(
+				entries => {
+					entries.forEach(entry => {
+						if (entry.isIntersecting) {
+							entry.target.style.opacity = '1';
+							entry.target.style.transform = 'translateY(0) scale(1)';
+						}
+					});
+				},
+				{
+					threshold: 0.2,
+					rootMargin: '50px',
+				}
+			);
+
+			document.querySelectorAll('.card-hover').forEach(card => {
+				observer.observe(card);
 			});
 		</script>
 	</body>
